fix: implement real user registration logic and seed initial admin